--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,10 @@ DATABASE_URL=postgresql://user:password@localhost:5432/zeromarket
 AUTH_SECRET=generate-with-openssl-rand-hex-32
 AUTH_GITHUB_ID=your-github-oauth-app-client-id
 AUTH_GITHUB_SECRET=your-github-oauth-app-client-secret
+
+# Cloudflare R2 Storage
+R2_ACCOUNT_ID=your-cloudflare-account-id
+R2_ACCESS_KEY_ID=your-r2-access-key-id
+R2_SECRET_ACCESS_KEY=your-r2-secret-access-key
+R2_BUCKET_NAME=zeromarket-skills
+R2_PUBLIC_URL=https://pub-your-hash.r2.dev
