--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "db:migrate": "drizzle-kit migrate"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.997.0",
+    "@aws-sdk/s3-request-presigner": "^3.997.0",
     "drizzle-orm": "^0.45.1",
     "next": "16.1.6",
     "next-auth": "5.0.0-beta.30",
